--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="./styles/reset.css" rel="stylesheet" />
+    <link href="./styles/main.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Evaluación intermedia</title>
   </head>
   <body>
-    <h1>hola mundo</h1>
+    <header>
+      <div>
+        <img src="./images/logo-adalab.png" alt="Logo adalab" />
+      </div>
+      <nav>
+        <ul>
+          <li>BLOG</li>
+          <li>CONTACTO</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Creando Diversidad Digital</h1>
+    </main>
   </body>
 </html>
