add first mobile version

--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
     <title>Evaluación intermedia</title>
   </head>
   <body>
-    <header>
-      <div>
-        <img src="./images/logo-adalab.png" alt="Logo adalab" />
-      </div>
-      <nav>
-        <ul>
-          <li>BLOG</li>
-          <li>CONTACTO</li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <h1>Creando Diversidad Digital</h1>
-    </main>
+    <div class="container">
+      <header class="header">
+        <div class="header-logo">
+          <img src="./images/logo-adalab.png" alt="Logo adalab" />
+        </div>
+        <nav class="header-menu">
+          <ul class="header-menu-items">
+            <li>BLOG</li>
+            <li>CONTACTO</li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main">
+        <h1>Creando Diversidad Digital</h1>
+      </main>
+    </div>
   </body>
 </html>
