add main title line break

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         </nav>
       </header>
       <main class="main">
-        <h1>Creando Diversidad Digital</h1>
+        <h1 class="main-title">
+          <span>Creando</span>
+          <span>Diversidad</span>
+          <span>Digital</span>
+        </h1>
       </main>
     </div>
   </body>
