fix header fixed position

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Evaluación intermedia</title>
   </head>
   <body>
-    <div class="container">
-      <header class="header">
+    <header class="header">
+      <div class="header-content">
         <div class="header-logo">
           <img src="./images/logo-adalab.png" alt="Logo adalab" />
         </div>
@@ -23,14 +23,14 @@
             <li>CONTACTO</li>
           </ul>
         </nav>
-      </header>
-      <main class="main">
-        <h1 class="main-title">
-          <span>Creando</span>
-          <span>Diversidad</span>
-          <span>Digital</span>
-        </h1>
-      </main>
-    </div>
+      </div>
+    </header>
+    <main class="main">
+      <h1 class="main-title">
+        <span>Creando</span>
+        <span>Diversidad</span>
+        <span>Digital</span>
+      </h1>
+    </main>
   </body>
 </html>
