--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-logo">
-        <img src="./images/logo-adalab.png" alt="Logo adalab" />
+      <div class="header-content wrapper">
+        <div class="header-logo">
+          <a href="./">
+            <img src="./images/logo-adalab.png" alt="Logo adalab" />
+          </a>
+        </div>
+        <nav class="header-menu">
+          <ul class="header-menu-items">
+            <li>BLOG</li>
+            <li>CONTACTO</li>
+          </ul>
+        </nav>
       </div>
-      <nav class="header-menu">
-        <ul class="header-menu-items">
-          <li>BLOG</li>
-          <li>CONTACTO</li>
-        </ul>
-      </nav>
     </header>
     <main class="main">
       <h1 class="main-title">
