--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./styles/reset.css" rel="stylesheet" />
-    <link href="./styles/main.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link href="./styles/reset.css" rel="stylesheet" />
+    <link href="./styles/main.css" rel="stylesheet" />
+
     <title>Evaluación intermedia</title>
   </head>
   <body>
@@ -16,22 +17,34 @@
       <div class="header-content wrapper">
         <div class="header-logo">
           <a href="./">
-            <img src="./images/logo-adalab.png" alt="Logo adalab" />
+            <img
+              src="./images/logo-adalab.png"
+              alt="Logo adalab"
+              title="Logo adalab"
+            />
           </a>
         </div>
         <nav class="header-menu">
           <ul class="header-menu-items">
-            <li>BLOG</li>
-            <li>CONTACTO</li>
+            <li>
+              <a href="#" title="ir a blog" class="header-menu-items-links"
+                >blog</a
+              >
+            </li>
+            <li>
+              <a href="#" title="ir a contacto" class="header-menu-items-links"
+                >contacto</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
     </header>
     <main class="main">
       <h1 class="main-title">
-        <span>Creando</span>
-        <span>Diversidad</span>
-        <span>Digital</span>
+        <span>creando</span>
+        <span>diversidad</span>
+        <span>digital</span>
       </h1>
     </main>
   </body>
